--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,28 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:ital,wght@1,300&display=swap');
+
+  body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: lighter;
+  }
+
+  #logo{
+    max-width: 350px;
+  }
+
+  #img1{
+    max-width: 70%;
+  }
+
+  .titulo{
+    font-family: 'Lato', sans-serif;
+  }
+
+  @media (min-width: 992px) {
+    .smaller-img-lg {
+      max-width: 80%;
+    }
+  }
